--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="mattstest"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
